tests/src/frontend/typechecking/invalid/inherit_params_dupe_declared.sk
base class B(x: Bool, y: Bool) {}
class C(x: Int, y: String) extends B
